# echoo.app

./: .eslintrc.json  .gitignore  .prettierrc.json  CNAME  Cargo.toml  README.md  _redirects  asset-manifest.json  editor.worker.js  editor.worker.js.map  index.html  json.worker.js  json.worker.js.map  makefile  nx.json  package-lock.json  package.json  rustfmt.toml  tsconfig.base.json
.github/: FUNDING.yml
.github/workflows/: build-bundle.yml  main.yml  release-linux.yml
Casks/: echoo.rb
api/: Cargo.toml  Dockerfile  build.rs  makefile  readme.md
api/proto/: tools.proto
api/src/: lib.rs  lib_BACKUP_20452.rs  lib_BASE_20452.rs  main.rs  plugin.rs
api/src/helpers/: dir.rs  mod.rs  pio.rs
api/src/services/: json_formatter.rs  mod.rs  tiny_img.rs
api/src/tools/: mod.rs  services.rs
apps/client-web/: .eslintrc.json  dockerfile  jest.config.ts  nginx.conf  project.json
apps/client-web-e2e/: project.json
apps/client-web-e2e/src/e2e/: app.cy.ts
apps/client-web/src/: _redirects  index.html  main.ts  styles.scss
apps/client-web/src/app/: app.component.html  app.component.ts  app.routes.ts  global-config.module.ts
docs/: asset-manifest.json  base64-ende.md  index.html  json-formatter.md  url-parser.md
docs/static/css/: main.00351a82.chunk.css  main.00351a82.chunk.css.map
docs/static/js/: 0.1ea44679.chunk.js  3.de0d702f.chunk.js  main.68c49909.chunk.js  main.68c49909.chunk.js.map  runtime-main.05c20b6e.js  runtime-main.05c20b6e.js.map
document/: json-formatter.md
documents/: url-parser.md
libs/angular/echoo-icons/: .eslintrc.json  project.json
libs/components/echoo-icons/src/: index.ts
libs/components/features/echoo-icons/: .eslintrc.json
libs/components/github-button/: project.json
libs/components/shared/tool-options-toolbar/: project.json
libs/components/tool-options-toolbar/: README.md  jest.config.ts
libs/directives/fitter-element/: .eslintrc.json  jest.config.ts  project.json
libs/echoo-icons/: project.json
libs/echoo-icons/src/lib/: icons.module.ts  types.ts
libs/fitter-element/: README.md
libs/fitter-element/src/: index.ts
libs/fitter-element/src/lib/: sync-style-with-element.directive.ts
libs/formatter-provider/: README.md  jest.config.ts  project.json  tsconfig.json
libs/formatter-provider/src/: index.ts
libs/formatter-provider/src/lib/: json-formatter-provider.ts
libs/github-button/: README.md  jest.config.ts
libs/github-button/src/: index.ts
libs/services/web-storage-service/: README.md  jest.config.ts
libs/services/web-storage-service/src/: index.ts
libs/tools/formatter-provider/: tsconfig.json
libs/tools/formatter-provider/src/: index.ts
libs/types/: README.md  jest.config.ts  project.json
libs/types/src/: index.ts
libs/types/src/lib/: tool-brand-info.ts  toolSetting.ts
libs/web-storage-service/: project.json
libs/web-storage-service/src/: web-storage-service.service.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  plugin.rs
src-tauri/src/commands/: fs.rs  mod.rs  os.rs
src-tauri/src/events/: mod.rs
src-tauri/src/libs/: mod.rs
src-tauri/src/libs/plugins/: api_server.rs
src-tauri/src/ui/: actions.rs  app.rs  menu.rs  mod.rs  tray.rs
static/css/: main.1c1b4655.chunk.css  main.1c1b4655.chunk.css.map  main.261197fd.css  main.261197fd.css.map  main.47917e9b.chunk.css  main.47917e9b.chunk.css.map  main.54da0453.css  main.54da0453.css.map  main.80068f34.chunk.css  main.80068f34.chunk.css.map  main.a54567a0.chunk.css  main.a54567a0.chunk.css.map  main.b7ee852c.chunk.css  main.b7ee852c.chunk.css.map  main.bc1da7ba.chunk.css  main.bc1da7ba.chunk.css.map  main.c6cb4d8d.chunk.css  main.c6cb4d8d.chunk.css.map  main.ca760ca6.chunk.css  main.ca760ca6.chunk.css.map  main.d642ed38.chunk.css  main.d642ed38.chunk.css.map
static/js/: 0.063b5310.chunk.js  0.063b5310.chunk.js.map  0.0ade978b.chunk.js  0.0ade978b.chunk.js.map  0.1e44dd80.chunk.js  0.1e44dd80.chunk.js.map  0.1ea44679.chunk.js.map  0.2f7e7351.chunk.js  0.2f7e7351.chunk.js.map  0.7a425744.chunk.js  0.7a425744.chunk.js.map  0.7ed69e7b.chunk.js  0.7ed69e7b.chunk.js.map  0.96c4dfd8.chunk.js  0.96c4dfd8.chunk.js.map  0.97a24868.chunk.js  0.97a24868.chunk.js.map  0.9975ec6f.chunk.js  0.9975ec6f.chunk.js.map  0.b7d1ce3a.chunk.js  0.b7d1ce3a.chunk.js.map  0.cd50be4b.chunk.js  0.cd50be4b.chunk.js.map  0.d18e2976.chunk.js  0.d18e2976.chunk.js.map  0.d239b610.chunk.js  0.d239b610.chunk.js.map  0.d426cadd.chunk.js  0.d426cadd.chunk.js.map  3.0452453e.chunk.js  3.1c6112df.chunk.js  3.31419dd5.chunk.js  3.3547aca1.chunk.js  3.359a7bd8.chunk.js  3.6ae7571c.chunk.js  3.6f96b5f5.chunk.js  3.6f96b5f5.chunk.js.LICENSE.txt  3.74b1d71b.chunk.js  3.7bfe5638.chunk.js  3.8bc690db.chunk.js  (+135 more)
wasm-api/: .travis.yml  Cargo.toml  README.md
wasm-api/pkg/: package.json  wasm_api.d.ts  wasm_api.js  wasm_api_bg.js  wasm_api_bg.wasm  wasm_api_bg.wasm.d.ts
wasm-api/proto/devutils/: json-formatter.proto  tiny-img.proto
wasm-api/src/: crontab_parser.rs  hash.rs  img_compressor.rs  json_formatter.rs  lib.rs  uuid.rs
wasm-api/tests/: hash.rs  uuid.rs
web-src/: .gitignore  Dockerfile  Makefile  config-overrides.js  makefile  package-lock.json  package.json
web-src/ext_libs/normalize-url/: index.js  package.json
web-src/public/: index.html  manifest.json
web-src/src/: App.scss  App.tsx  index.scss  index.tsx
web-src/src/app/consts/: literals.ts  tool-sider-configs.tsx
web-src/src/app/context/: api.ts  pref.ts  shared-subjects.ts
web-src/src/app/libs/: helpers.ts
web-src/src/app/pages/: main-page.scss  main-page.tsx
web-src/src/app/shared/: copyableInput.tsx  dialog-suggest-client.scss  dialog-suggest-client.tsx  first-lanching-dialog.tsx  main-footer.scss  main-footer.tsx  main-nav.scss  main-nav.tsx  privacy.tsx  setting.tsx  tools-sider.scss  tools-sider.tsx
web-src/src/app/tool-blocks/: base64serde.scss  base64serde.tsx  crontab-parser.tsx  crontab-paser.scss  tiny-img.scss  (+14 more)
web-src/src/assets/: base64-img-sample.json
web-src/src/types/: index.d.ts
web-src/src/utils/: calendar.js
(+99 files in other folders)
