[package]
name = "echoo_app_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
regex = "1.5.4"
anyhow = "1.0.55"

# gRPC
tonic = "0.6.1"
tonic-web = "0.2.0"
prost = { version = "0.9.0", features = ["prost-derive"] }
tokio = { version = "1.13.0", features = ["full"] }
bytes = "1"
prost-wkt = "0.2.1"
prost-wkt-types = "0.2.1"

# fake data generator
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
rand = "0.8"

jsonprima = "0.3.0" # json lint

[dependencies.pio]
git = "https://github.com/siiptuo/pio.git"
branch = "master"

[dependencies.http]
version = "0.2"

[dependencies.http-body]
version = "0.4.4"

[dependencies.hyper]
version = "0.14.14"
features = ["full"]
optional = true

[build-dependencies]
tonic-build = { version = "0.6.2" }
prost-wkt-build = "0.2.1"