[package]
name = "echoo"
version = "0.21.1"
description = "Tools for developers"
authors = ["zs.matrix62@gmail.com"]
license = ""
repository = ""
default-run = "echoo"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies.tauri]
version = "1.0.0-rc.3"
features = ["api-all", "system-tray"]

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/tauri-plugin-window-state"
branch = "dev"

[dependencies]
echoo_app_api = { path = "../api" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
