[package]
name = "echoo"
version = "0.29.0"
description = "Tools for developers"
authors = ["zs.matrix62@gmail.com"]
license = ""
repository = ""
default-run = "echoo"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies.tauri]
version = "1.0.4"
features = ["api-all", "icon-ico", "icon-png", "system-tray"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
md5 = "0.7.0"
api = { path = "../api/" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
