[package]
name = "wasm-api"
version = "0.1.0"
authors = ["zs.matrix62 <zs.matrix62@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
regex = "1.5.4"
anyhow = "1.0.55"
base64 = "0.13.0"
# fake data generator
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
jsonprima = "0.3.0" # json lint
getrandom = { version = "0.2.5", features = ["js"] }

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
